# xtorch-bridge-simple-test

./: main.py
xtorch_bridge/: __init__.py  loader.py
xtorch_bridge/cpp/: CMakeLists1.txt  fast_add.cpp  xtorch_test.cpp
xtorch_bridge_example/: CMakeLists.txt  example.py
xtorch_bridge_example/src/: bindings.cpp
